# esp_bt_hid_testing

./: README.md
esp_hid_device/: sdkconfig
esp_hid_device/main/: CMakeLists.txt  esp_hid_device_main.c  hid.c  hid.h  main.c
esp_hid_device/main/inc/: app_hid_shared.h  device_input_hid.h  idle_task.h  io_led.h  joystick.h  joystick_defs.h  media_hid.h
esp_hid_device/main/src/: app_hid_shared.c  device_input_hid.c  esp_hid_gap.c  idle_task.c  io_led.c  joystick.c  media_hid.c
